--- a/Day19/index.html
+++ b/Day19/index.html
@@ -23,7 +23,7 @@
         <h1>Fonts</h1>
         <h2>about Fonts</h2>
         <p>This is a video on fonts</p>
-        <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos sequi accusamus quas itaque molestias dolorem quisquam quod, adipisci maxime dolore, mollitia illo officia deserunt voluptatem iure qui. Fugit aliquam possimus aperiam commodi eum amet veniam at vel. Necessitatibus asperiores eos amet laborum dolor, ipsum porro!</p>
+        <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
     <script src="script.js"></script>
 </body>
